starexec-kubernetes/YAMLFiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: se-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starexec
  template:
    metadata:
      labels:
        app: starexec
    spec:
      serviceAccountName: starexec-headnode
      containers:
      - name: starexec
        image: tptpstarexec/starexec:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: vol-db
          mountPath: /var/lib/mysql
        - name: vol-star
          mountPath: /home/starexec
        - name: vol-pro
          mountPath: /project
        - name: vol-export
          mountPath: /export
        - name: ssh-key
          mountPath: /root/.ssh/starexec_podman_key
          # subPath: starexec_podman_key
      volumes:
      - name: vol-db
        persistentVolumeClaim:
          claimName: voldb
      - name: vol-star
        persistentVolumeClaim:
          claimName: volstar
      - name: vol-pro
        persistentVolumeClaim:
          claimName: volpro
      - name: vol-export
        persistentVolumeClaim:
          claimName: volexport
      - name: ssh-key
        secret:
          secretName: starexec-ssh-key
